schema/testdata/errors/attribute_unique_invalids_args.keel
model Post {
    fields {
        //expect-error:28:31:AttributeArgumentError:unexpected argument for @unique as no arguments are expected
        title Text @unique(arg)
    }
}
